[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jnotice"                        #  PyPI パッケージ名
version = "1.4.0"
description = "Prebuilt JupyterLab extension (jnotice) packaged for pip"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["jupyterlab>=4,<5"]
license = { text = "BSD-3-Clause" }
authors = [{ name = "Your Org" }]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["jnotice"]                  # Python パッケージ名
include-package-data = false

[tool.setuptools.package-data]
jnotice = []                            # 追加の同梱データなし

# 
[tool.setuptools.data-files]
"share/jupyter/labextensions/jnotice" = [
  "share/jupyter/labextensions/jnotice/package.json",
  "share/jupyter/labextensions/jnotice/install.json"
]
"share/jupyter/labextensions/jnotice/static" = [
  "share/jupyter/labextensions/jnotice/static/*"
]
"etc/jupyter/jupyter_server_config.d" = [
  "etc/jupyter/jupyter_server_config.d/90-jnotice.json"
]
